собрана инфраструктура для докеризации
- получаю ошибку при подключении к базе данных

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=student
-DB_PASSWORD=student
-DB_NAME=kupipodariday
+POSTGRES_HOST=data-base
+POSTGRES_PORT=5455
+POSTGRES_USER=student
+POSTGRES_PASSWORD=over_mind
+POSTGRES_DB=kupipodariday
+PGDATA=/var/lib/postgresql/data
 JWT_SECRET=CLEVER_GIRL
