--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-POSTGRES_HOST=data-base
-POSTGRES_PORT=5455
+POSTGRES_HOST=database
+POSTGRES_PORT=5432
 POSTGRES_USER=student
-POSTGRES_PASSWORD=over_mind
+POSTGRES_PASSWORD=overmind
 POSTGRES_DB=kupipodariday
 PGDATA=/var/lib/postgresql/data
 JWT_SECRET=CLEVER_GIRL
