приложение готово к развертыванию на сервере

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,14 +13,8 @@ RUN npm i
 COPY . .
 RUN npm run build
 
-FROM node:16-alpine As production
-WORKDIR /app
-COPY package*.json ./
-# Флаг --omit=dev означает "не ставить dev-зависимости"
-RUN npm i --omit=dev
-COPY . .
-# Копируем результат сборки из build-стадии
-COPY --from=builder /app/build ./build
-EXPOSE 3000
-# Команда для запуска
-CMD ["npm", "run", "start"]
+FROM nginx:latest As production
+COPY --from=builder /app/build /usr/share/nginx/html
+COPY ./nginx/conf.d  /etc/nginx/conf.d
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
